2004-03-18  James Henstridge  <james@daa.com.au>

	* jhbuild/commands/tinderbox.py (do_tinderbox): raise a UsageError
	if no output directory specified (related to bug 136638).

	* jhbuild/frontends/tinderbox.py (TinderboxBuildScript.end_build):
	fix printing of error values.

2004-03-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules:
	Use gnome-2-4 branch for zenity.

2004-03-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules:
	Oops, reverting previous commit, I committed the wrong file.

	* modulesets/gnome26.modules:
	Really commit the good file this time.

2004-03-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome26.modules:
	Disable mozilla freetype2 support. It is not needed since
	we use Xft instead and doesn't build with freetype2 HEAD.

2004-03-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules:
	Use libcroco-0-4 branch for libcroco.

2004-03-17  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/gnome26.modules:

	Use gnome-2-6 branch for epiphany

2004-03-16  Kristian Rietveld  <kris@babi-pangang.org>

	* jhbuild/main.py (main): write error message to stderr
	when reading the config file fails.

	* jhbuild/config.py (Config): raise an exception when
	the creation of the aclocaldir fails.

2004-03-16  Johan Dahlin  <johan@gnome.org>

	* jhbuild/config.py (Config.setup_env): If PKG_CONFIG_PATH is
	unset, set it to $libdir/pkgconfig:/usr/lib/pkgconfig, so a
	mozilla installation in /usr can be used.

2004-03-04  James Henstridge  <james@daa.com.au>

	* README, jhbuild/main.py: some help updates from Andreas
	Persenius <ndap@ndap.net>.

2004-03-03  James Henstridge  <james@daa.com.au>

	* jhbuild/main.py (main): treat getopt.error like UsageError

	* jhbuild/moduleset.py (_parse_module_set): don't download module
	files from network if nonetwork is true.

	* jhbuild/utils/httpcache.py (Cache.load): add a nonetwork