@@ -1,5 +1,9 @@
 2004-03-18  James Henstridge  <james@daa.com.au>
 
+	* jhbuild/commands/base.py (run): don't print a traceback for
+	unknown command names.  Fixes bug #136445.  Based on a patch by
+	Paolo Borelli <pborelli@katamail.com>.
+
 	* jhbuild/commands/tinderbox.py (do_tinderbox): raise a UsageError
 	if no output directory specified (related to bug 136638).
 
